--- a/style.css
+++ b/style.css
@@ -13,10 +13,18 @@ body{
     padding-bottom: 0;
     padding-top: 10px;
     cursor: pointer;
-    min-height: 180px;
+    min-height: 200px;
 
+}
+
+.item-description{
+    min-height: 100px;
 }
 
 .card-item:hover{
 	background-color: #f0f3ff;
+}
+
+.bg-purchased{
+	background-color: #e8dede;
 }
