--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 body{
 	background-color: #f8f8f8;
+    background-image: url('bg.jpg');
+    background-position: center;
+    background-attachment: fixed;
+    background-size: contain;
+    background-repeat: no-repeat;
+
 }
 
 .strikeout{
@@ -8,6 +14,7 @@ body{
 }
 
 .card-item {
+	border: 2px solid #f0f8ff;
     background-color: #f0f8ff;
     padding: 5px;
     padding-bottom: 0;
@@ -22,7 +29,7 @@ body{
 }
 
 .card-item:hover{
-	background-color: #f0f3ff;
+	border: 2px solid #5988b1;
 }
 
 .bg-purchased{
